--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.2+5
+version: 3.0.3+6
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
@@ -42,6 +42,8 @@ dependencies:
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
   double_back_to_close_app: ^2.1.0
+  internet_connection_checker: ^1.0.0+1
+  connectivity_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
